# mia

./: Cargo.toml  README.md  expanded.rs
crates/mia_derive/: Cargo.toml
crates/mia_derive/src/: api.rs  gpu.rs  lib.rs  ops.rs  rumia.rs  shader.rs
crates/mia_derive/src/shader/: mod.rs
examples/: shader.rs
src/: lib.rs  num.rs
src/cpu/: backend.rs  frontend.rs
src/hal/: frontend.rs  mod.rs  ops.rs
src/hal/cpu/: add.rs  binary.rs  matmul.rs  mod.rs  norm.rs
src/hal/gpu/: mod.rs  shader.rs
src/hal/gpu/shader/: ast.rs  mod.rs
src/loom/: device.rs  layout.rs  mod.rs  num.rs  ops.rs  platform.rs  slice.rs  tensor.rs
src/loom/device/: allocator.rs  cpu.rs  gpu.rs  mod.rs
