[package]
authors = ["Zhenyuan Zhang <cryscan@umich.edu>"]
categories = ["science", "text-processing"]
description = "A model inference framework."
edition = "2024"
exclude = ["assets/", "screenshots/"]
homepage = "https://github.com/cryscan/mia"
keywords = ["deep-learning", "language", "model"]
license = "MIT OR Apache-2.0"
name = "mia"
repository = "https://github.com/cryscan/mia"
rust-version = "1.85.0"
version = "0.1.0"

[dependencies]
bytemuck = { version = "1.21", features = ["extern_crate_alloc"] }
derive_more = { version = "2.0.1", features = [
    "deref",
    "deref_mut",
    "display",
    "from",
    "into",
] }
flume = "0.11"
futures = "0.3"
gpp = "0.6.2"
half = { version = "2.2", features = ["bytemuck", "serde"] }
instant = { version = "0.1", features = ["inaccurate", "wasm-bindgen"] }
itertools = "0.14"
log = "0.4"
rustc-hash = "2.1"
safetensors = "0.5"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_bytes = "0.11.14"
serde_json = "1.0"
serde_variant = "0.1.3"
thiserror = "2.0"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
tracing-tracy = { version = "0.11.4", optional = true }
uid = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "25.0"

[dependencies.tokio]
default-features = false
features = ["macros", "rt", "sync", "time"]
version = "1.45"

[dev-dependencies]
anyhow = "1"

[features]
default = ["native"]

## Enables on native platforms.
native = ["subgroup-ops", "tokio/rt-multi-thread"]
## Enables only for the WASM platform.
web = []
## Enables subgroup operations in the kernels. Accelerates the inference on some device.
subgroup-ops = []
## Enables performance tracing.
trace = ["tracing", "tracing-subscriber", "tracing-tracy"]
