[workspace.package]
authors = ["Zhenyuan Zhang <cryscan@umich.edu>"]
categories = ["science", "text-processing"]
description = "A model inference framework."
edition = "2024"
exclude = ["assets/", "screenshots/"]
homepage = "https://github.com/cryscan/mia"
keywords = ["deep-learning", "language", "model"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cryscan/mia"
rust-version = "1.85.0"
version = "0.0.1"

[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude = ["assets/", "crates/", "screenshots/"]
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "mia"
repository.workspace = true
version.workspace = true


[dependencies]
bytemuck = { version = "1.21", features = ["extern_crate_alloc"] }
casey = "0.4.2"
derive_more = { version = "2.0.1", features = [
    "as_ref",
    "deref",
    "deref_mut",
    "display",
    "from",
    "into",
] }
dyn-clone = "1.0.19"
flume = "0.11"
futures = "0.3"
glam = { version = "0.30.3", features = ["bytemuck"] }
gpp = "0.6.2"
half = { version = "2.2", features = ["bytemuck"] }
instant = { version = "0.1", features = ["inaccurate", "wasm-bindgen"] }
itertools = "0.14"
log = "0.4"
rustc-hash = "2.1"
safetensors = "0.5"
serde = { version = "1", features = ["derive", "rc"], optional = true }
serde_bytes = { version = "0.11", optional = true }
take_mut = "0.2.2"
thiserror = "2.0"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
tracing-tracy = { version = "0.11.4", optional = true }
trait-variant = "0.1.2"
u4 = "0.1.2"
uid = "0.1"
uuid = { version = "1.17.0", features = ["bytemuck", "js", "v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "25.0"

[dependencies.mia-derive]
# version = "0.0"
path = "crates/mia_derive"

[dependencies.tokio]
default-features = false
features = ["macros", "rt", "sync", "time"]
version = "1.45"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["native"]

## Enables on native platforms.
native = ["subgroup-ops", "tokio/rt-multi-thread"]
## Enables `serde` on types.
serde = [
    "dep:serde",
    "dep:serde_bytes",
    "glam/serde",
    "half/serde",
    "u4/serde",
    "uuid/serde",
]
## Enables subgroup operations in the kernels. Accelerates the inference on some device.
subgroup-ops = []
## Enables performance tracing.
trace = ["tracing", "tracing-subscriber", "tracing-tracy"]
